# mammos-parser

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.binder/: environment.yml
.github/workflows/: check-changelog.yml  publish.yml  test.yml
changes/: 1.added.md  10.changed.md  11.changed.md  9.added.md  README.md
dev/: integrating_entity_units.ipynb
examples/: index.rst  quickstart.ipynb
src/mammos_parser/: __init__.py  main.py  uppsala.py  util.py
src/mammos_parser/temperature_dependent_magnetization/: dataset-schema.yaml
src/mammos_parser/uppsala/: __init__.py  _validate.py  collect.py  create_files.py  dataset-schema.yaml
src/mammos_parser/uppsala_spindynamics/: __init__.py
tests/: test_uppsala.py  test_uppsala_collect_dataset.py  test_uppsala_file_structure.py  test_uppsala_filesystem_structure.py  test_uppsala_generated_files.py  test_util.py  test_version.py
