[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mammos-parser"
version = "0.1.0"
authors = [
  { name = "Santa Pile" },
  { name = "Wilfried Hortschitz" },
  { name = "Martin Dobiasch" },
  { name = "Swapneel Amit Pathak" },
  { name = "Andrea Petrocchi" },
  { name = "Martin Lang" },
  { name = "Samuel Holt" },
  { name = "Hans Fangohr" },
  { name = "Thomas Schrefl" },
]
description = "Parse datasets from the MaMMoS project partners"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  'Topic :: Scientific/Engineering :: Physics',
]
requires-python = ">=3.11"
dependencies = [
  "h5py",
  "mammos-entity>=0.7.0",
  "mammos-units",
  "matplotlib",
  "rich",
  "pandas",
  "scipy",
]

[project.urls]
Homepage = "https://MaMMoS-project.github.io"
Documentation = "https://mammos-project.github.io/mammos"
Repository = "https://github.com/MaMMoS-project/mammos-parser"
Issues = "https://github.com/MaMMoS-project/mammos-parser/issues"
Changelog = "https://mammos-project.github.io/mammos/changelog"

[tool.ruff]
target-version = "py311"
exclude = [
  "dev",
]
[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]
isort.known-local-folder = [ "src/mammos_units" ]
pydocstyle.convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["B018"]  # "Found useless expression. Either assign it to a variable or remove it."; false positives when using implicit __repr__ in the notebook
"tests/*" = ["D100", "D103"]  # do not enforce docstrings in tests

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "osx-arm64", "linux-64", "osx-64", "win-64" ]

[tool.pixi.dependencies]
python = "==3.11"
hatch = "*"
ipython = "*"
jupyterlab = ">3"
nbval = "*"
packaging = "<25"
pre-commit = "*"
pytest = "*"
ruff = "*"
towncrier = "*"

[tool.pixi.pypi-dependencies]
mammos-parser = { path = ".", editable = true }

[tool.pixi.tasks]
examples = "jupyter-lab examples"
test-unittest = "pytest -v tests"
test-docstrings = "pytest -v --doctest-modules src/mammos_parser"
test-notebooks = "pytest -v --nbval-lax examples"
test-all = { depends-on = ["test-unittest", "test-docstrings", "test-notebooks"] }
style = "pre-commit run --all-files"

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
package = "mammos_parser"
title_format = "## [mammos-parser {version}](https://github.com/MaMMoS-project/mammos-parser/tree/{version}) – {project_date}"
# point to PRs instead of issues; CI ensures that the correct PR numbers exist
issue_format = "[#{issue}](https://github.com/MaMMoS-project/mammos-parser/pull/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
